<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CRADLE</string>
    <string name="action_settings">Settings</string>
    <string name="intro_tab_welcome">CRADLE VSA Support App</string>
    <string name="intro_tab_permissions">Permissions</string>
    <string name="intro_tab_privacy_policy">Privacy Policy</string>
    <string name="done">I ACCEPT</string>
    <string name="intro_permission_description">
        <![CDATA[
        <p>App requires some permissions:</p>
        <h3>Camera</h3>
        <p>App uses the camera to take a photo of the CRADLE VSA\'s screen after it measures vitals.</p>
        <h3>SMS</h3>
        <p>App may automatically send SMS messages to a relay point after creating a reading, referral, or form response.</p>
        ]]>
    </string>
    <string name="title_activity_patients">Patients</string>
    <string name="menu_readings">Readings</string>
    <string name="notification_channel_name">iCradle</string>
    <string name="notification_channel_description">iCradle Notification</string>
    <string name="save">SAVE</string>
    <string name="next">NEXT</string>
    <string name="title_activity_reading">Patient Reading</string>
    <string name="reading_tab_patient_info">Patient</string>
    <string name="reading_tab_symptoms">Symptoms</string>
    <string name="reading_tab_camera">Photo</string>
    <string name="reading_tab_confirm_data">Vitals</string>
    <string name="reading_tab_summary">Summary</string>
    <string-array name="reading_symptoms">
        <item>No symptoms</item>
        <item>Headache</item>
        <item>Blurred vision</item>
        <item>Abdominal pain</item>
        <item>Bleeding</item>
        <item>Feverish</item>
        <item>Unwell</item>
        <item>Cough</item>
        <item>Shortness of breath</item>
        <item>Sore throat</item>
        <item>Muscle ache</item>
        <item>Fatigue</item>
        <item>Loss of sense</item>
        <item>Loss of taste</item>
        <item>Loss of smell</item>
    </string-array>
    <string-array name="reading_ga_units">
        <item>Weeks</item>
        <item>Months</item>
        
        
    </string-array>
    <string name="sex">Sex</string>
    <string-array name="urine_test_symbols" translatable="false">
        <item>NAD</item>
        <item>+</item>
        <item>++</item>
        <item>+++</item>
    </string-array>
    <string name="reading_recheck_vitals_now">Recheck vitals now</string>
    <string name="reading_recheck_vitals_in_one_minute">Recheck vitals in 1 minute</string>
    <string name="reading_recheck_vitals_in_minutes">Recheck vitals in %1$d minutes</string>
    <string name="reading_referred_to_health_facility">Referred to %1$s</string>
    <string name="reading_referred_to_health_facility_unknown">Referred to a health facility</string>
    <string name="reading_name_age_ga">%1$s, %2$s @ %3$s</string>
    <string name="reading_gestational_age_in_weeks_and_days">%1$dw +%2$dd</string>
    <string name="reading_time_summary">%1$s: %2$s</string>
    <string name="reading_blood_pressure">BP: %1$d/%2$d</string>
    <string name="reading_heart_rate">HR: %1$d</string>
    <string name="reading_referral_sent">Referral sent to %1$s on %2$s</string>
    <string name="reading_referral_notsent">Not referred</string>
    <string name="reading_patient_id">#%1$s</string>
    <string name="reading_uploaded_to_server">Reading uploaded to a server on %1$s.</string>
    <string name="reading_not_uploaded_to_server">Reading NOT yet uploaded to a server.</string>
    <string name="analysis_none">No vital signs entered</string>
    <string name="analysis_green">Patient is likely healthy</string>
    <string name="analysis_yellow_up">Raised BP</string>
    <string name="analysis_yellow_down">Low BP</string>
    <string name="analysis_red_up">Very raised BP</string>
    <string name="analysis_red_down">In severe shock</string>
    <string name="brief_advice_retest_now">Recommend rechecking vitals immediately to confirm reading.</string>
    <string name="brief_advice_retest_after15">Recommend rechecking vitals in 15 minutes to confirm reading.</string>
    <string name="brief_advice_none">Go to Photo tab and take picture of CRADLE VSA. Then go to Vitals tab and confirm data.</string>
    <string name="brief_advice_green">Continue normal care.</string>
    <string name="brief_advice_yellow_up">Monitor for preeclampsia. Transfer to health facility within 24h.</string>
    <string name="brief_advice_yellow_down">Common but assess for infection, bleeding, anaemia, and dehydration.</string>
    <string name="brief_advice_red_up">Urgent action needed. Transfer to health facility within 4h. Monitor baby.</string>
    <string name="brief_advice_red_down">Urgent action needed. Get help and assess mother. Immediately transfer to health facility within 1h.</string>
    <string name="discard_dialog_discard">Discard</string>
    <string name="discard_dialog_cancel">Cancel</string>
    <string name="discard_dialog_new_reading">Discard new reading?</string>
    <string name="discard_dialog_rechecking">Discard vitals recheck?</string>
    <string name="discard_dialog_changes">Discard your changes?</string>
    <string name="discard_dialog_new_patient">Discard this new patient?</string>
    <string name="discard_dialog_new_patient_and_reading">Discard this new patient and reading?</string>
    <string name="discard_dialog_title">Discard?</string>
    <string name="save_patient_locally">Could not save with referral, patient will be saved locally instead</string>
    <string name="save_locally_title">Save Patient and Reading?</string>
    <string name="save_locally_positive_button">Save Locally</string>
    <string name="discard_draft">Discard Draft</string>
    <string name="send_sms_dialog_retry_message"> Data has been saved on local device.
        Retry the action or perform a sync later using an internet connection (WiFi, 3G, etc.).</string>
    <string name="dialog_referral_toast_sms_failed_saved_locally">SMS failed.
        Saved on this device and will upload on your next sync.</string>
    <string name="dialog_referral_toast_no_sim">No SIM card. Saved on this device
        and will upload on your next sync.</string>
    <string name="dialog_referral_toast_sms_key_invalid">SMS key expired. Saved on this device
        and will upload on your next sync.</string>
    <string name="village">Village</string>
    <string name="block_no">Block</string>
    <string name="zone">Zone</string>
    <string name="id_number">ID number</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gestational_age">Gestational Age: </string>
    <string name="id">ID</string>
    <string name="id_colon">ID:</string>
    <string name="patients">Patients</string>
    <string name="village_colon">Village:</string>
    <string name="personal_information">Personal Information</string>
    <string name="medical_information">Medical Information</string>
    <string name="pregnant">Pregnant:</string>
    <string name="patient_summary">Patient Summary</string>
    <string name="patient_update_medical_history">Update Medical History</string>
    <string name="patient_update_drug_history">Update Drug History</string>
    <string name="patient">Patient:</string>
    <string name="reading">Reading </string>
    <string name="systolic_blood_pressure">Systolic Blood Pressure:</string>
    <string name="diastolic_blood_pressure">Diastolic Blood Pressure:</string>
    <string name="heart_rate">Heart Rate (BPM):</string>
    <string name="assessment">Assessment</string>
    <string name="diagnosis">Diagnosis:</string>
    <string name="treatment">Treatment:</string>
    <string name="medical_history">Medical History</string>
    <string name="drug_history">Drug History</string>
    <string name="take_new_reading_button">Take New Reading</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="go">Go</string>
    <string name="logging_in">Logging in</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_error">Invalid email or password.</string>
    <string name="login_activity_no_internet">No internet available</string>
    <string name="activity_patients_no_patients_message">You don\'t have any patients right now.\n Go to the dashboard to create a new patient.</string>
    <string name="pregnant_question">Pregnant?</string>
    <string name="create_new_reading">Create New Reading</string>
    <string name="create_new_referral">Create New Referral</string>
    <string name="create_new_item">Create New</string>
    <string name="global_search">Search all patients</string>
    <string name="sign_out_question">Sign out?</string>
    <string name="settings_title">Settings</string>
    <string name="settings_advanced">Advanced</string>
    <string name="default_settings">(default)</string>
    <string name="summary_recheck_vitals_now">Recheck vitals now is recommended</string>
    <string name="summary_recheck_vitals_15_min">Recheck vitals in 15 minutes is recommended</string>
    <string name="patient_info_no_name">No name</string>
    <string name="reading_no_gestational_age">No gestational age</string>
    <string name="date_of_birth_or_age">Date-of-birth or age</string>
    <string name="missing_required_patient_info">Missing required patient information</string>
    <string name="dialog_missing_information_title">Missing information</string>
    <string name="dialog_missing_information_message">Some required fields from PATIENT or CONFIRM VITALS tabs are missing. Please enter this data before referring patient.</string>
    <string name="referral_dialog_title">Send referral</string>
    <string name="referral_dialog_button_send_sms">Send via SMS</string>
    <string name="referral_dialog_button_send_web">Send via DATA</string>
    <string name="not_available_n_slash_a">N/A</string>
    <string name="patient_profile_add_to_my_patients_list_button">Add to my patients list</string>
    <string name="stats_activity_filter_showAll">Show statistics for all readings</string>
    <string name="stats_activity_filter_byUserID">Show statistics for me</string>
    <string name="stats_activity_filter_byFacilityID">Show statistics for a health facility</string>
    <string name="stats_activity_pickFacility_header">Choose a health facility.</string>
    <string name="stats_activity_date_picker">Select date range</string>
    <string name="stats_activity_filter">Filter</string>
    <string name="health_facility_label">Health facility</string>
    <string name="sync_patients">Sync Patients</string>
    <string name="date_last_assessed">Date Last Assessed:</string>
    <string name="special_investigations_and_results">Special Investigations + Results:</string>
    <string name="final_diagnosis">Final Diagnosis:</string>
    <string name="treatment_operation">Treatment/Operation:</string>
    <string name="medication_prescribed">Medication Prescribed:</string>
    <string name="follow_up">Follow-Up:</string>
    <string name="textview">TextView</string>
    <string name="create_new_form">Create New Form</string>
    <string name="workflow_details_na">N/A</string>
    <string name="workflow_details_by_na">by N/A</string>
    <string name="workflow_details_description_label">Description</string>
    <string name="workflow_details_started_label">Started</string>
    <string name="workflow_details_progress_label">Progress</string>
    <string name="workflow_details_last_edited_label">Last Edited</string>
    <string name="workflow_details_working_on_label">Currently Working On:</string>
    <string name="workflow_details_step_history_label">Step history</string>
    <string name="workflow_details_no_steps">No steps recorded yet.</string>
</resources>