<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cradleplatform.neptune.view.StatsActivity">
    <item
        android:id="@+id/stats_time_picker"
        android:icon="@drawable/ic_schedule_24px"
        android:orderInCategory="100"
        android:title="@string/stats_activity_date_picker"
        app:showAsAction="always" />
    <item
        android:id="@+id/stats_filters"
        android:icon="@drawable/ic_filter_alt_24px"
        android:orderInCategory="90"
        android:title="@string/stats_activity_filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/syncPatients"
        android:icon="@drawable/ic_baseline_sync_24_white"
        android:orderInCategory="80"
        android:title="@string/sync_patients"
        android:contentDescription="@string/sync_patients"
        app:showAsAction="always" />
</menu>
