<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/assessmentCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/assessmentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/assessment"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/assessmentCardDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/date_last_assessed"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assessmentTitle" />

            <TextView
                android:id="@+id/assessmentCardDateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/textview"
                app:layout_constraintBaseline_toBaselineOf="@+id/assessmentCardDateTitle"
                app:layout_constraintStart_toEndOf="@+id/assessmentCardDateTitle"
                tools:text="YYYY-MM-DD @ HH:MM" />


            <TextView
                android:id="@+id/specialInvestigationsAndResultsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/special_investigations_and_results"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assessmentCardDateTitle" />

            <TextView
                android:id="@+id/specialInvestigationsAndResultsTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/specialInvestigationsAndResultsTitle"
                app:layout_constraintStart_toEndOf="@+id/specialInvestigationsAndResultsTitle"
                tools:text="@string/not_available_n_slash_a" />


            <TextView
                android:id="@+id/finalDiagnosisTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/final_diagnosis"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/specialInvestigationsAndResultsTitle" />

            <TextView
                android:id="@+id/finalDiagnosisTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/finalDiagnosisTitle"
                app:layout_constraintStart_toEndOf="@+id/finalDiagnosisTitle"
                tools:text="@string/not_available_n_slash_a" />


            <TextView
                android:id="@+id/treatmentOperationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/treatment_operation"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/finalDiagnosisTitle" />


            <TextView
                android:id="@+id/treatmentOperationTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/treatmentOperationTitle"
                app:layout_constraintStart_toEndOf="@+id/treatmentOperationTitle"
                tools:text="@string/not_available_n_slash_a" />


            <TextView
                android:id="@+id/medicationPrescribedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/medication_prescribed"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treatmentOperationTitle" />


            <TextView
                android:id="@+id/medicationPrescribedTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/medicationPrescribedTitle"
                app:layout_constraintStart_toEndOf="@+id/medicationPrescribedTitle"
                tools:text="@string/not_available_n_slash_a" />

            <TextView
                android:id="@+id/assessmentFollowUpTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/followUpTitle"
                app:layout_constraintStart_toEndOf="@+id/followUpTitle"
                tools:text="@string/not_available_n_slash_a" />

            <TextView
                android:id="@+id/followUpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/follow_up"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medicationPrescribedTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>