<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.cradleVSA.neptune.viewmodel.ReferralDialogViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/ReadingFlowTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/statFilterDialog_radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/statFilterDialog_userIDButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_activity_filter_byUserID" />

                <RadioButton
                    android:id="@+id/statFilterDialog_showAllButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_activity_filter_showAll" />

                <RadioButton
                    android:id="@+id/statFilterDialog_healthFacilityButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_activity_filter_byFacilityID" />

            </RadioGroup>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/health_facility_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/health_facility_label"
                android:labelFor="@id/health_facility_auto_complete_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statFilterDialog_radioGroup">

                <AutoCompleteTextView
                    android:id="@+id/health_facility_auto_complete_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@={viewModel.healthFacilityToUse}"
                    bind:setMaterialSpinnerItemsWithArray="@{viewModel.selectedHealthFacilitiesAsStrings}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/filterPickerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_activity_pickFacility_header"
                android:textAppearance="@style/TextAppearance.Cradle.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/health_facility_input_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>